# androidZ_lab

./: build.gradle
app/: .gitignore  build.gradle
app/src/main/cpp/: CMakeLists.txt  VideoRenderer.cpp  VideoRenderer.h  myapplication.cpp
app/src/main/cpp/gfg/res/: ResLib.cpp  ResLib.h
app/src/main/java/com/example/myapplication/: GLConfig.kt  MainActivity.kt  MyGL.kt
app/src/main/java/com/example/myapplication/ui/theme/: Theme.kt
app/src/main/rust/myrust/: Cargo.toml
app/src/main/rust/myrust/src/: lib.rs
gradle/wrapper/: gradle-wrapper.properties
